--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+title: Intelligent Code Generation/ Mutation to aid fuzzing of JavaScript engines
+description: Bookmark this to keep an eye on my project updates!
