--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-minimal
 title: Intelligence in Code Generation and Mutation using MAB algorithms
 description: Bookmark this to keep an eye on my project updates!
+baseurl: "" 
+url: "https://deamonspawn.github.io"
